# robotframework-agenteval

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  mypy.ini  pyproject.toml  ruff.toml
_bmad-output/spikes/0-1-hosted-mcp-observer/: README.md  observer_prototype.py  pyproject.toml  run_dual_transport_probe.py  run_smoke_loop.sh  run_streamable_http_probe.py
_bmad-output/spikes/0-1-hosted-mcp-observer/concurrency/: SpikeLibrary.py  test_pabot.robot
_bmad-output/spikes/0-1-hosted-mcp-observer/concurrency/pabot_evidence/iter_1/: worker_pid3303438.jsonl  worker_pid3303440.jsonl  worker_pid3303446.jsonl  worker_pid3303452.jsonl  worker_pid3303689.jsonl  worker_pid3303740.jsonl  worker_pid3303753.jsonl  worker_pid3303761.jsonl  worker_pid3303887.jsonl  worker_pid3303907.jsonl  worker_pid3303917.jsonl  worker_pid3303984.jsonl  worker_pid3304067.jsonl  worker_pid3304098.jsonl  worker_pid3304152.jsonl
_bmad-output/spikes/0-1-hosted-mcp-observer/concurrency/pabot_evidence/iter_2/: worker_pid3304402.jsonl  worker_pid3304403.jsonl  worker_pid3304404.jsonl  worker_pid3304406.jsonl  worker_pid3304686.jsonl  worker_pid3304706.jsonl  worker_pid3304711.jsonl  worker_pid3304723.jsonl  worker_pid3304797.jsonl  worker_pid3304838.jsonl  worker_pid3304907.jsonl  worker_pid3304914.jsonl  worker_pid3304915.jsonl  worker_pid3305075.jsonl  worker_pid3305084.jsonl
_bmad-output/spikes/0-1-hosted-mcp-observer/concurrency/pabot_evidence/iter_3/: worker_pid3305354.jsonl  worker_pid3305355.jsonl  worker_pid3305356.jsonl  worker_pid3305360.jsonl  worker_pid3305686.jsonl  worker_pid3305694.jsonl  worker_pid3305696.jsonl  worker_pid3305704.jsonl  worker_pid3305845.jsonl  worker_pid3305871.jsonl  worker_pid3305899.jsonl  worker_pid3305942.jsonl  worker_pid3305996.jsonl  worker_pid3306056.jsonl  worker_pid3306137.jsonl
_bmad-output/spikes/0-1-hosted-mcp-observer/concurrency/pabot_evidence/iter_4/: worker_pid3306349.jsonl  worker_pid3306350.jsonl  worker_pid3306351.jsonl  worker_pid3306354.jsonl  worker_pid3306534.jsonl  worker_pid3306586.jsonl  (+9 more)
_bmad-output/spikes/0-1-hosted-mcp-observer/edge_cases/: external_mixed_cases.py
_bmad-output/spikes/0-1-hosted-mcp-observer/measurements/: dual_transport.jsonl  edge_cases.jsonl  smoke_loop.txt  streamable_http.jsonl
_bmad-output/spikes/0-1-hosted-mcp-observer/transports/: in_memory_server.py  stdio_subprocess_server.py  streamable_http_server.py  subprocess_observer_wrapper.py
_bmad-output/spikes/0-2-pabot-mcp-cleanup/: README.md  context_prototype.py  mcp_listener.py  pyproject.toml  run_atexit_probe.sh  run_handshake_race_probe.py  run_smoke_matrix.sh
_bmad-output/spikes/0-2-pabot-mcp-cleanup/measurements/: aggregated.csv  cell_summary.csv  raw_pid3319260_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319264_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319266_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319270_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319275_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319279_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319282_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319283_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319304_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319308_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319312_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319313_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319317_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319324_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319325_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319332_scope-test_server-rf_mcp_substitute.jsonl  raw_pid3319865_scope-test_server-echo_server.jsonl  raw_pid3319866_scope-test_server-echo_server.jsonl  raw_pid3319868_scope-test_server-echo_server.jsonl  raw_pid3319869_scope-test_server-echo_server.jsonl  raw_pid3319870_scope-test_server-echo_server.jsonl  raw_pid3319877_scope-test_server-echo_server.jsonl  raw_pid3319878_scope-test_server-echo_server.jsonl  raw_pid3319891_scope-test_server-echo_server.jsonl  raw_pid3319905_scope-test_server-echo_server.jsonl  raw_pid3319909_scope-test_server-echo_server.jsonl  raw_pid3319913_scope-test_server-echo_server.jsonl  raw_pid3319914_scope-test_server-echo_server.jsonl  raw_pid3319921_scope-test_server-echo_server.jsonl  raw_pid3319925_scope-test_server-echo_server.jsonl  raw_pid3319928_scope-test_server-echo_server.jsonl  raw_pid3319930_scope-test_server-echo_server.jsonl  raw_pid3320007_scope-test_server-echo_server.jsonl  raw_pid3320008_scope-test_server-echo_server.jsonl  raw_pid3320009_scope-test_server-echo_server.jsonl  raw_pid3320012_scope-test_server-echo_server.jsonl  raw_pid3320013_scope-test_server-echo_server.jsonl  raw_pid3320014_scope-test_server-echo_server.jsonl  (+42 more)
_bmad-output/spikes/0-2-pabot-mcp-cleanup/measurements/atexit_probe/: _harness.py  summary.csv
_bmad-output/spikes/0-2-pabot-mcp-cleanup/measurements/handshake_race/: results.jsonl
_bmad-output/spikes/0-2-pabot-mcp-cleanup/measurements/leak_diffs/: suite_echo_server_iter5_AFTER.txt  suite_rf_mcp_substitute_iter1_BEFORE.txt  suite_rf_mcp_substitute_iter2_BEFORE.txt  suite_rf_mcp_substitute_iter3_BEFORE.txt  suite_rf_mcp_substitute_iter4_BEFORE.txt  suite_slow_server_iter3_AFTER.txt  suite_slow_server_iter4_AFTER.txt  suite_slow_server_iter5_AFTER.txt
_bmad-output/spikes/0-2-pabot-mcp-cleanup/measurements/timeout_probe/: raw_pid3264749_scope-test_server-slow_server.jsonl  raw_pid3264750_scope-test_server-slow_server.jsonl  raw_pid3264754_scope-test_server-slow_server.jsonl  raw_pid3264756_scope-test_server-slow_server.jsonl
_bmad-output/spikes/0-2-pabot-mcp-cleanup/servers/: echo_server.py  rf_mcp_pin.txt  rf_mcp_substitute.py  slow_server.py
_bmad-output/spikes/0-2-pabot-mcp-cleanup/suites/: test_scope_all_16.robot  timeout_probe.robot
_bmad-output/spikes/0-2-pabot-mcp-cleanup/suites/multi_suite/: suite_a.robot  suite_b.robot  suite_c.robot  suite_d.robot
(+832 files in other folders)
