[project]
name = "robotframework-agenteval"
version = "0.0.1"
description = "Robot Framework library for evaluating AI coding agents (skills, subagents, hooks, MCP servers, tools)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Many Kasiriha" },
]
keywords = ["robotframework", "ai", "agents", "mcp", "evaluation", "testing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]

# Pin discipline (Story 0.1+0.2 spike-validated; AC-1a.1.5 + Epic 0 retro Norm #2):
# - mcp / robotframework / robotframework-pabot / anyio are EXACT-pinned to the spike-validated versions.
#   AdapterVersionDriftWarning (Epic 5 Story 5.2 deliverable per ADR-004 Consequences) will detect
#   future mcp SDK refactors that break the `request_handlers` dict-wrap pattern.
# - litellm / opentelemetry / pyyaml / jsonschema are range-pinned with sane upper-bound caps;
#   Phase 1 stories that exercise them (Epic 4 / Epic 5 / Epic 6) will tighten pins if needed.
dependencies = [
  "mcp==1.27.1",
  "robotframework==7.4.2",
  "robotframework-pythonlibcore>=4.5",  # No upper bound per architecture L495 (Story 2.1 code-review A4 fix; pre-edit `<5.0` ceiling was unauthorized).
  "anyio==4.13.0",
  "litellm>=1.50,<2.0",
  # Story 5.1 code-review Auditor H2 fix 2026-05-20: floor bumped 1.20 → 1.27
  # to match PRD NFR-COMPAT-06 + architecture L337/L1638 ratified floors. The
  # 1.20 floor was a draft holdover; ratified docs say 1.27. Resolved env
  # ships 1.41.1 so the bump has no resolver impact.
  "opentelemetry-api>=1.27,<2.0",
  "opentelemetry-sdk>=1.27,<2.0",
  "pyyaml>=6.0,<7.0",
  "jsonschema>=4.0,<5.0",
  # Story 6.3 (2026-05-20) — AssertionEngine adoption per ADR-019 + architecture L138/L1646.
  # Wraps Story 6.2 `Should *` keywords + `Skill.Should Be Valid Frontmatter` through
  # `_assertions/adapter.py` for polling-ban (FR28) + validate-gate (FR43) dispatch.
  # Pre-approved via Story 6.2 epic L1629 amendment ("Story 6.3 will add the
  # robotframework-assertion-engine>=4.0,<5.0 dep").
  "robotframework-assertion-engine>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0",
  "robotframework-pabot==5.2.2",
  "pre-commit>=3.0,<5.0",  # Story 1a.5 hygiene; `uv run pre-commit install` per CONTRIBUTING.md
]
# Story 4.2 (Epic 4) — Claude Code CLI adapter optional-extras group.
# No Python deps; the `claude` binary must be on `$PATH` (npm install -g
# @anthropic-ai/claude-code). The group exists per FR13b spec for
# documentation + future-compat when CC-CLI-specific Python deps land.
claude-code = []
# Story 10.1 (Epic 10) — Claude Agent SDK adapter (Phase 2, FR13c). Uses
# Anthropic's purpose-built `claude-agent-sdk` PyPI package (distinct from
# the LLM-only `anthropic` client) for native Agent SDK semantics + MCP.
# Pre-1.0 SDK, so upper-bound is strict per FR60 binary-drift pattern.
# `anyio` is already a base hard dep at L35 — not duplicated here
# (Story 10.1 review LOW-1 patch).
claude-sdk = ["claude-agent-sdk>=0.1.0,<1.0"]

[project.urls]
Homepage = "https://github.com/manykarim/robotframework-agenteval"
Repository = "https://github.com/manykarim/robotframework-agenteval"
Issues = "https://github.com/manykarim/robotframework-agenteval/issues"
# PyPI placeholder — populated when first release publishes.
# PyPI = "https://pypi.org/project/robotframework-agenteval/"

[project.scripts]
agenteval = "AgentEval.cli:main"

# Entry-point tables — 6 total. Count per ADR-013 (entry-points discovery; was ADR-A2;
# ratification trajectory closes when Story 1a.3 ratifies the remaining non-spike ADRs):
#
#   4 `agenteval.*` discovery groups:
#     - agenteval.coding_agents (Epic 4)
#     - agenteval.providers (Epic 4)
#     - agenteval.judges (Phase 2)
#     - agenteval.sandboxes (5th group added by ADR-018; ratified 2026-05-17)
#
#   1 legacy `robotframework_agenteval.adapters` group per FR17a (agenteval-owned;
#     pre-existed the agenteval.* naming convention; counts toward the
#     5 "agenteval-owned" entry-point tables in ADR-018's reckoning).
#
#   1 RF-owned `robot.listener` group (RF Listener v3 entry point per FR33a).
#
# All tables START EMPTY in Story 1a.1; sub-libraries register entries when authored
# (Epic 4 for coding_agents/providers; Epic 5 for telemetry/listener; Phase 2+ for
# judges/sandboxes).
[project.entry-points."agenteval.coding_agents"]
# Story 4.1 (Epic 4) — Generic LiteLLM-backed CodingAgentAdapter.
# Story 4.2 (Epic 4) — Claude Code CLI adapter (claude binary >=2.0.0,<3.0.0).
generic = "AgentEval.coding_agent.generic:GenericAdapter"
claude-code-cli = "AgentEval.coding_agent.claude_code_cli:ClaudeCodeCLIAdapter"
# Story 10.1 (Epic 10) — Claude Agent SDK adapter under [claude-sdk] extra.
claude-agent-sdk = "AgentEval.coding_agent.claude_agent_sdk:ClaudeAgentSDKAdapter"

[project.entry-points."agenteval.providers"]
# Story 4.1 (Epic 4) — LLMProviderAdapter implementations.
# Both built-in providers are also registered in BUILTIN_PROVIDERS in
# providers/factory.py so the factory works even when entry-points
# haven't loaded (test-friendly). Entry-points OVERRIDE the built-in
# registry per PRD FR17c.
litellm = "AgentEval.providers.litellm_adapter:LiteLLMAdapter"
mock = "AgentEval.providers.mock:MockProvider"

[project.entry-points."agenteval.judges"]
# Empty — Phase 2 (Epic 12).

[project.entry-points."agenteval.sandboxes"]
# Empty — Phase 3 (real sandbox backends ship; ADR-018 §Cross-cutting forward references).

[project.entry-points."robot.listener"]
# Populated by Epic 5 Story 5.1 (OTel listener). Canonical user-facing
# invocation remains `robot --listener AgentEval.telemetry.listener tests/`
# per `docs/contracts/listener-integration.md` L20 — RF does NOT auto-discover
# from PyPA entry-points (empirically verified 2026-05-17). The entry-point
# is provided for Phase-2 tooling that explicitly walks the listener group.
agenteval = "AgentEval.telemetry.listener:Listener"

[project.entry-points."robotframework_agenteval.adapters"]
# Empty — FR17a registration mechanism; populated by Epic 4 adapter implementations.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/AgentEval"]

[tool.hatch.build.targets.sdist]
include = [
  "src/AgentEval",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]
